--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <div class="row">
                     <div class="col-sm-12 caption text-center mt-50">
                         <h5>Hello.</h5>
-                        <h1>I am Thomas</h1>
+                        <h1>I'm Palash Singh</h1>
                         <p>Web and graphic designer</p><br>
                         <a href="#page5" class="butn butn-bg-color" data-scroll-nav="4">
                             <i></i>
@@ -145,12 +145,10 @@
                     <div class="col-lg-6 valign">
                         <div class="cont">
                             <h5>Hello, I am</h5>
-                            <h2>Thomas E Evans</h2>
-                            <p>Nulla metus metus ullamcorper vel tincidunt sed euismod nibh volutpat velit class aptent
-                                taciti sociosqu ad litora torquent per conubia nostra text of the printing and type
-                                setting.</p>
+                            <h2>Palash Singh</h2>
+                            <p>I'm Hardworking designer and Developer bsed in Aligarh, I offer wide range of web services including website designing, web development, software development, ecommerce solutions, search engine optimization (SEO), content management and Conent Writing. I'm well experienced in web designers and software developers who understand client's requirements to create beautiful websites and efficient web applications.</p>
 
-                            <!-- social icons -->
+                            <!-- social icons --> 
                             <div class="social-icon">
                                 <a href="#0"><i class="fab fa-facebook-f"></i></a>
                                 <a href="#0"><i class="fab fa-twitter"></i></a>
@@ -1016,7 +1014,5 @@
 
 </body>
 
-
-<!-- Mirrored from thomass.netlify.app/scrolling/index.html by HTTrack Website Copier/3.x [XR&CO'2017], Sat, 08 Jan 2022 18:24:35 GMT -->
 
 </html>
