--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                         <div class="cont">
                             <h5>Hello, I am</h5>
                             <h2>Palash Singh</h2>
-                            <p>I'm Hardworking designer and Developer bsed in Aligarh, I offer wide range of web services including website designing, web development, software development, ecommerce solutions, search engine optimization (SEO), content management and Conent Writing. I'm well experienced in web designers and software developers who understand client's requirements to create beautiful websites and efficient web applications.</p>
+                            <p>I'm Hardworking designer and Developer bsed in Noida, I offer wide range of web services including website designing, web development, software development, ecommerce solutions, search engine optimization (SEO), content management and Conent Writing. I'm well experienced in web designers and software developers who understand client's requirements to create beautiful websites and efficient web applications.</p>
 
                             <!-- social icons --> 
                             <div class="social-icon">
@@ -658,132 +658,6 @@
         ======================================= -->
 
 
-
-        <!-- =====================================
-        ==== Start Price -->
-
-        <section class="price section bg-dark" id="section7" data-scroll-index="6">
-            <div class="container">
-                <div class="row">
-
-                    <div class="col-lg-3">
-                        <div>
-                            <div class="section-head valign mb-md100">
-                                <div>
-                                    <span>Our Offers</span>
-                                    <h3>Pricing</h3>
-                                </div>
-                                <i></i>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-9 pricing-tables text-center">
-
-                        <div class="row">
-
-                            <div class="col-lg-4 col-md-6">
-                                <div class="item mb-md50">
-                                    <div class="type">
-                                        <h4>Basic</h4>
-                                    </div>
-
-                                    <div class="value">
-                                        <h3><span>$</span>10</h3>
-                                        <span class="per">Per Of Month</span>
-                                    </div>
-
-                                    <div class="features">
-                                        <ul>
-                                            <li>10 GB Disk Space</li>
-                                            <li>15 Domain Names</li>
-                                            <li>Unlimited Support</li>
-                                        </ul>
-                                    </div>
-
-                                    <div class="order">
-                                        <a href="#0" class="butn butn-bg">
-                                            <i></i>
-                                            <span>Purchase Now</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4 col-md-6">
-                                <div class="item active bg-dark2 mb-sm50">
-
-                                    <div class="best">
-                                        <span>Best Value</span>
-                                    </div>
-
-                                    <div class="type">
-                                        <h4>Standard</h4>
-                                    </div>
-
-                                    <div class="value">
-                                        <h3><span>$</span>30</h3>
-                                        <span class="per">Per Of Month</span>
-                                    </div>
-
-                                    <div class="features">
-                                        <ul>
-                                            <li>100 GB Disk Space</li>
-                                            <li>30 Domain Names</li>
-                                            <li>Unlimited Support</li>
-                                        </ul>
-                                    </div>
-
-                                    <div class="order">
-                                        <a href="#0" class="butn butn-bg-color">
-                                            <i></i>
-                                            <span>Purchase Now</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="col-lg-4 col-md-6 offset-lg-0 offset-md-3">
-                                <div class="item">
-                                    <div class="type">
-                                        <h4>Premium</h4>
-                                    </div>
-
-                                    <div class="value">
-                                        <h3><span>$</span>80</h3>
-                                        <span class="per">Per Of Month</span>
-                                    </div>
-
-                                    <div class="features">
-                                        <ul>
-                                            <li>500 GB Disk Space</li>
-                                            <li>100 Domain Names</li>
-                                            <li>Unlimited Support</li>
-                                        </ul>
-                                    </div>
-
-                                    <div class="order">
-                                        <a href="#0" class="butn butn-bg">
-                                            <i></i>
-                                            <span>Purchase Now</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-        <!-- End Price ====
-        ======================================= -->
-
-
-
         <!-- =====================================
             ==== Start Blog -->
 
@@ -904,21 +778,21 @@
                                 <span class="icon"><i class="fas fa-phone"></i></span>
                                 <div class="cont">
                                     <h6>Phone : </h6>
-                                    <p>+20 010 251 789 18 , 251 789 18</p>
+                                    <p><a href="tel:+917248243248"> +91 7248243248</a></p>
                                 </div>
                             </div>
                             <div class="item">
                                 <span class="icon"><i class="fas fa-envelope"></i></span>
                                 <div class="cont">
                                     <h6>Email : </h6>
-                                    <p><a href="pifo_support%40website.html">Thomas_support@website.com</a></p>
+                                    <p><a href="mailto:arpii827@gmail.com">Arpii827@gmail.com</a></p>
                                 </div>
                             </div>
                             <div class="item">
                                 <span class="icon"><i class="fas fa-map-marker-alt"></i></span>
                                 <div class="cont">
                                     <h6>Address : </h6>
-                                    <p>4655 Carter Street, Olney, Illinois</p>
+                                    <p>Gurgaon sector 47, 122018</p>
                                 </div>
                             </div>
                         </div>
@@ -1014,5 +888,7 @@
 
 </body>
 
+
+<!-- Mirrored from thomass.netlify.app/scrolling/index.html by HTTrack Website Copier/3.x [XR&CO'2017], Sat, 08 Jan 2022 18:24:35 GMT -->
 
 </html>
