--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="zxx">
 
-
-<!-- Mirrored from thomass.netlify.app/scrolling/index.html by HTTrack Website Copier/3.x [XR&CO'2017], Sat, 08 Jan 2022 18:23:56 GMT -->
-<!-- Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 
 <head>
@@ -146,7 +143,7 @@
                         <div class="cont">
                             <h5>Hello, I am</h5>
                             <h2>Palash Singh</h2>
-                            <p>I'm Hardworking designer and Developer bsed in Noida, I offer wide range of web services including website designing, web development, software development, ecommerce solutions, search engine optimization (SEO), content management and Conent Writing. I'm well experienced in web designers and software developers who understand client's requirements to create beautiful websites and efficient web applications.</p>
+                            <p>I'm Hardworking designer and Developer based in Noida, I offer wide range of web services including website designing, web development, software development, ecommerce solutions, search engine optimization (SEO), content management and Conent Writing. I'm well experienced in web designers and software developers who understand client's requirements to create beautiful websites and efficient web applications.</p>
 
                             <!-- social icons --> 
                             <div class="social-icon">
